LRQA-51076 Add jsf-jdk8 test to acceptance test runs

--- a/test.properties
+++ b/test.properties
@@ -1162,6 +1162,7 @@
         integration-sybase160-jdk8,\
         javadoc-jdk8,\
         js-unit-jdk8,\
+        jsf-jdk8,\
         lpkg-base-jdk8,\
         lpkg-container-jdk8,\
         lpkg-controller-jdk8,\
