--- a/test.properties
+++ b/test.properties
@@ -5612,6 +5612,7 @@
         data.archive.type,\
         database.bare.enabled,\
         database.jndi.enabled,\
+        database.partition.enabled,\
         database.sharding,\
         database.types,\
         databases.size,\
